@@ -1,3 +1,9 @@
+2007-04-16  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/producers/wms.py:
+	  Working authentication. Comma separated parameters! Now remove some
+	  nasty hacks, because they were nasty and were unneccesary.
+
 2007-04-13  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/producers/asfparse.py:
